--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+   
 <title>Page Title</title>
 </head>
 <body>
+    <a href="#" id="start" class='button button1'>Click Me!</a>
+    <h1 id="birthday" class="neon">Happy Birthday!!!</h1>
     <canvas id="canvas"></canvas>
-    <div class="copy">
-        <h1>Happy Birthday</h1>
-    </div>
 </body>
 
 <script src="app.js"></script>
