--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="#" id="start" class='button button1'>Click Me!</a>
-    <h1 id="birthday" class="neon">Happy Birthday!!!</h1>
+    <h1 id="birthday" class="neon">Happy Birthday Rianne!!!</h1>
     <canvas id="canvas"></canvas>
 </body>
 
